Changelog
=========

1.1.19 (unreleased)
-------------------

- Nothing changed yet.


1.1.18 (2017-02-08)
-------------------

- Update layer to Contrats_de_quartiers_Programmes
  Change field to DT_DEBUT
  [gotcha]


1.1.17 (2016-08-19)
-------------------

- Fix URLs after domain renaming
  [gotcha]


1.1.16 (2014-08-27)
-------------------

- Update address list on consecutive calls.


1.1.15 (2014-08-27)
-------------------

- Move conditional javascript.


1.1.14 (2014-07-25)
-------------------

- Fix typo


1.1.13 (2014-07-24)
-------------------

- Make it responsive 


1.1.12 (2014-06-23)
-------------------

- Nothing changed yet.


1.1.11 (2014-01-20)
-------------------

- Add javascript for ie9 and cors domain.


1.1.10 (2013-12-03)
-------------------

- Update mybrugis ws url.
- Don't use proxy to call CIRB geoserver.
- Add Authorization in proxy dev conf (in buildout.cfg) for mybugis


1.1.9 (2013-07-19)
------------------

- Use get instead of post for localize method.
- Escape address for (l') char.


1.1.7 (2013-07-11)
------------------

- Update gis url, prevent 404 error.


1.1.5 (2013-07-10)
------------------

- Update translations.


1.1.4 (2013-07-10)
------------------

- Add "Recherche pour l'adresse", thank you AnySufer.

1.1.3 (2013-06-27)
------------------

- Changed order of #map and #docs for AnySurfer reasons.


1.1.2 (2013-06-18)
------------------

- Nothing changed yet.


1.1.1 (2013-06-18)
------------------

- Update proxy url
- Update some Anysufer changes
- Update translations


1.0.10 (2013-02-15)
-------------------

- Nothing changed yet.


1.0.9 (2013-02-15)
------------------

- Translations.
- Index some value


1.0.8 (2013-02-04)
------------------

- Use a proxy_pass for gis services (especially address search).


1.0.7 (2013-01-25)
------------------

- Use a proxy_pass for brugis service.


1.0.6 (2013-01-25)
------------------

- Add some text on the bottom of table.


1.0.5 (2013-01-24)
------------------
