@@ -1,7 +1,4 @@
 <?xml version="1.0"?>
 <metadata>
-  <version>0001</version>
-  <!--dependencies>
-      <dependency>profile-collective.geo.openlayers:default</dependency>
-  </dependencies-->
+  <version>0002</version>
 </metadata>
