@@ -4,7 +4,8 @@ Changelog
 1.1.19 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Fix URLs when switching to https
+  [gotcha]
 
 
 1.1.18 (2017-02-08)
